--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -506,6 +506,8 @@ spec:
                     type: boolean
                   disableCountTooLarge:
                     type: boolean
+                  disableDiskFailurePath:
+                    type: boolean
                   disableNeitherHostNorPort:
                     type: boolean
                   disableSpecificContainDisk:
