--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -60,7 +60,7 @@ data:
         host: {{ .Values.controller.webhook.host | quote }}
         port: {{ .Values.controller.webhook.port }}
       safeMode:
-        nameMeLater: {{ .Values.controller.safeMode.nameMeLater }}
+        specifiedEnvironment: {{ .Values.controller.safeMode.specifiedEnvironment }}
         enable: {{ .Values.controller.safeMode.enable }}
         namespaceThreshold: {{ .Values.controller.safeMode.namespaceThreshold }}
         clusterThreshold: {{ .Values.controller.safeMode.clusterThreshold }}
