--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -467,6 +467,8 @@ spec:
                 description: Set is a map of label:value. It implements Labels.
                 nullable: true
                 type: object
+              specifiedEnv:
+                type: string
               staticTargeting:
                 type: boolean
               unsafeMode:
