--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -53,7 +53,7 @@ controller:
     host: "" # host to use to serve requests
     port: 9443 # port to use to serve requests
   safeMode:
-    specifiedEnvironment: lima
+    environment: lima
     enable: false
     namespaceThreshold: 80
     clusterThreshold: 66
