--- a/examples/count_percentage.yaml
+++ b/examples/count_percentage.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: count-percentage
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: pod
   selector:
