--- a/examples/disk_pressure_write.yaml
+++ b/examples/disk_pressure_write.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: disk-pressure-write
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: pod
   selector:
