--- a/examples/level_node.yaml
+++ b/examples/level_node.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: level-node
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: node # impact the whole node instead of a single pod
   selector:
