--- a/examples/network_bandwidth_limitation.yaml
+++ b/examples/network_bandwidth_limitation.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: network-bandwidth-limitation
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: pod
   selector:
