--- a/examples/network_duplication.yaml
+++ b/examples/network_duplication.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: network-duplication
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   selector:
     app: demo-curl
