--- a/examples/timed_disruption.yaml
+++ b/examples/timed_disruption.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: timed-network-drop
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: pod
   selector:
