--- a/examples/network_delay.yaml
+++ b/examples/network_delay.yaml
@@ -8,6 +8,8 @@ kind: Disruption
 metadata:
   name: network-delay
   namespace: chaos-demo
+  annotations:
+    chaos.datadoghq.com/environment: "lima"
 spec:
   level: pod
   selector:
