--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,11 @@ commands:
           name: Install Python requirements
           command: pip3 install -r tasks/requirements.txt
   alpine_install_git:
-    description: "Install git using alpine apk"
+    description: "Install required dependencies"
     steps:
       - run:
           name: Install git
-          command: apk update && apk add git
+          command: apk update && apk add git openssh
 
 templates:
   # sets the working directory to the project path
