--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ build:make:
     - curl -O https://dl.google.com/go/${GO_FILENAME}
     - rm -rf /usr/local/go && tar -C /usr/local -xzf ${GO_FILENAME}
     - export PATH=$PATH:/usr/local/go/bin
-    - make
+    - make all docker-build-ebpf
   artifacts:
     paths:
       - bin/injector/injector_amd64
@@ -62,6 +62,7 @@ build:make:
       - bin/injector/injector_arm64
       - bin/manager/manager_arm64
       - bin/handler/handler_arm64
+      - bin/injector/ebpf/*
 
 # build the target from the local Dockerfile and push it to the registry
 # replication will depend on the TARGET_LABEL set by parent job
