--- a/examples/containers_targeting.yaml
+++ b/examples/containers_targeting.yaml
@@ -14,8 +14,8 @@ spec:
   level: pod
   selector:
     app: demo-curl
-  containers: # only target the dummy container, you can specify multiple containers here (all containers are targeted by default)
-    - dummy
+  containers: # only target the curl container, you can specify multiple containers here (all containers are targeted by default)
+    - curl
   count: 1
   network:
     drop: 10
