--- a/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
+++ b/chart/templates/crds/chaos.datadoghq.com_disruptions.yaml
@@ -409,7 +409,23 @@ spec:
                           type: string
                         ports:
                           items:
-                            type: integer
+                            properties:
+                              name:
+                                type: string
+                              port:
+                                maximum: 65535
+                                minimum: 0
+                                type: integer
+                              protocol:
+                                enum:
+                                - tcp
+                                - udp
+                                - sctp
+                                - ""
+                                type: string
+                            required:
+                            - port
+                            type: object
                           type: array
                       required:
                       - name
