--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -125,7 +125,13 @@ metadata:
   namespace: chaos-demo
 spec:
   ports:
-    - port: 8080
+    - name: regular
+      port: 8080
       targetPort: 80
+      protocol: TCP
+    - name: other
+      port: 8081
+      targetPort: 80
+      protocol: TCP
   selector:
     app: demo-nginx
