feat: adjust local configmap

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -14,11 +14,13 @@ data:
       metricsBindAddr: "127.0.0.1:8080"
       leaderElection: true
       metricsSink: {{ .Values.controller.metricsSink | quote }}
-      tracerSink: {{ .Values.controller.tracerSink | quote }}
-      tracer: 
-        enableTracer: {{ .Values.controller.tracer.enableTracer }}
+      tracer:
+        sink: {{ .Values.controller.tracer.sink | quote }}
+        enable: {{ .Values.controller.tracer.enable }}
         sampleRate: {{ .Values.controller.tracer.sampleRate }}
-        enableProfiler: {{ .Values.controller.tracer.enableProfiler }}
+      profiler:
+        sink: {{ .Values.controller.profiler.sink | quote }}
+        enable: {{ .Values.controller.profiler.enable }}
       enableSafeguards: {{ .Values.controller.enableSafeguards }}
       enableObserver: {{ .Values.controller.enableObserver }}
       notifiers:
