--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -17,12 +17,12 @@ controller:
   enableObserver: true # enable observer on targets, notifying of target warning status and events
   metricsSink: noop # metrics driver (noop or datadog)
   tracer:
-    sink: datadog
-    enable: true
-    sampleRate: 1.0
+    sink: noop # tracer driver (noop or datadog)
+    enable: false # enable tracer
+    sampleRate: 1.0 # tracer sampling rate
   profiler:
-    sink: datadog
-    enable: true
+    sink: noop # profiler driver (noop or datadog)
+    enable: false # enable profiler
   notifiers:
     common:
       clusterName: lima
